--- a/package.json
+++ b/package.json
@@ -12,7 +12,11 @@
   "devDependencies": {
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.5"
   },
-  "workspaces": ["frontend", "backend", "whatsapp-node"]
+  "workspaces": [
+    "frontend",
+    "backend",
+    "whatsapp-node"
+  ]
 }
