--- a/whatsapp-node/package.json
+++ b/whatsapp-node/package.json
@@ -2,10 +2,11 @@
   "name": "whatsapp-node",
   "version": "1.0.0",
   "description": "",
+  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "sucrase ./src -d ./dist --transforms typescript,imports",
+    "build": "tsc",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -15,11 +16,11 @@
     "@hapi/boom": "^10.0.1",
     "@whiskeysockets/baileys": "^6.6.0",
     "bullmq": "^5.1.10",
-    "file-type": "^19.0.0",
     "ioredis": "^5.3.2",
     "minio": "^7.1.3",
     "node-cache": "^5.1.2",
     "sucrase": "^3.35.0",
+    "typed-rpc": "^5.0.2",
     "winston": "^3.12.0",
     "winston-loki": "^6.0.8"
   },
