--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "chance": "^1.1.11",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
+    "emoji-picker-react": "^4.9.2",
     "formik": "^2.4.5",
     "framer-motion": "^10.18.0",
     "history": "^5.3.0",
