--- a/backend/package.json
+++ b/backend/package.json
@@ -28,27 +28,28 @@
     "@adminjs/nestjs": "^6.1.0",
     "@adminjs/passwords": "4.0.0",
     "@adminjs/typeorm": "^5.0.1",
-    "@babel/plugin-syntax-import-assertions": "^7.23.3",
-    "@bull-board/api": "^5.15.1",
-    "@bull-board/express": "^5.15.1",
-    "@bull-board/nestjs": "^5.15.1",
+    "@babel/plugin-syntax-import-assertions": "^7.24.1",
+    "@bull-board/api": "^5.17.0",
+    "@bull-board/express": "^5.17.0",
+    "@bull-board/nestjs": "^5.17.0",
     "@getbrevo/brevo": "2.0.0-beta.4",
-    "@nestjs/bull": "^10.1.0",
-    "@nestjs/common": "^10.3.3",
-    "@nestjs/config": "^3.2.0",
-    "@nestjs/core": "^10.3.3",
+    "@liaoliaots/nestjs-redis": "^9.0.5",
+    "@nestjs/bull": "^10.1.1",
+    "@nestjs/common": "^10.3.8",
+    "@nestjs/config": "^3.2.2",
+    "@nestjs/core": "^10.3.8",
     "@nestjs/jwt": "^10.2.0",
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
-    "@nestjs/platform-express": "^10.3.3",
-    "@nestjs/platform-socket.io": "^10.3.3",
-    "@nestjs/schedule": "^4.0.1",
-    "@nestjs/swagger": "^7.3.0",
+    "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/platform-socket.io": "^10.3.8",
+    "@nestjs/schedule": "^4.0.2",
+    "@nestjs/swagger": "^7.3.1",
     "@nestjs/typeorm": "^10.0.2",
-    "@nestjs/websockets": "^10.3.3",
+    "@nestjs/websockets": "^10.3.8",
     "@react-email/components": "^0.0.14",
     "@react-email/render": "0.0.12",
-    "adminjs": "^7.7.2",
+    "adminjs": "^7.8.1",
     "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
@@ -59,56 +60,55 @@
     "dockerode": "^4.0.2",
     "dotenv": "^16.4.5",
     "dotenv-expand": "^11.0.6",
-    "express": "^4.18.3",
+    "express": "^4.19.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.0",
-    "inquirer": "^9.2.16",
-    "ioredis": "^5.3.2",
-    "joi": "^17.12.2",
+    "inquirer": "^9.2.20",
+    "ioredis": "^5.4.1",
+    "joi": "^17.13.1",
     "lodash": "^4.17.21",
     "minio": "^7.1.3",
     "nest-winston": "^1.9.4",
-    "nestjs-minio": "^2.5.4",
-    "nestjs-redis-cluster": "^2.0.6",
+    "nestjs-minio": "^2.5.5",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
-    "pg": "^8.11.3",
+    "pg": "^8.11.5",
     "react": "^16.14.0",
-    "react-email": "^2.1.0",
+    "react-email": "^2.1.2",
     "reflect-metadata": "^0.1.14",
     "rxjs": "^7.8.1",
-    "socket.io": "^4.7.4",
+    "socket.io": "^4.7.5",
     "tslib": "^2.6.2",
     "typed-rpc": "^5.0.2",
     "typeorm": "^0.3.20",
-    "typeorm-extension": "^3.5.0",
-    "typia": "^5.5.4",
-    "winston": "^3.12.0",
-    "winston-loki": "^6.0.8"
+    "typeorm-extension": "^3.5.1",
+    "typia": "^5.5.10",
+    "winston": "^3.13.0",
+    "winston-loki": "^6.1.2"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
-    "@nestia/sdk": "^2.5.15",
+    "@nestia/sdk": "^2.6.4",
     "@nestjs/cli": "^10.3.2",
     "@nestjs/schematics": "^10.1.1",
-    "@nestjs/testing": "^10.3.3",
-    "@swc/cli": "^0.3.10",
-    "@swc/core": "^1.4.7",
+    "@nestjs/testing": "^10.3.8",
+    "@swc/cli": "^0.3.12",
+    "@swc/core": "^1.4.17",
     "@types/bcrypt": "^5.0.2",
     "@types/bluebird": "^3.5.42",
     "@types/cors": "^2.8.17",
-    "@types/dockerode": "^3.3.26",
+    "@types/dockerode": "^3.3.29",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.0",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.11.27",
-    "@types/nodemailer": "^6.4.14",
-    "@types/react": "^18.2.65",
+    "@types/node": "^20.12.8",
+    "@types/nodemailer": "^6.4.15",
+    "@types/react": "^18.3.1",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
