--- a/compose.yaml
+++ b/compose.yaml
@@ -14,86 +14,15 @@ services:
     volumes:
       - postgres:/var/lib/postgresql/data
 
-  redis-node-1:
-    image: redis:alpine
-    ports:
-      - 7000:6379
-    networks:
-      - zapdiviser
-    volumes:
-      - redis-1:/redis
-      - ./redis.conf:/redis/redis.conf
-    command: /bin/sh -c "redis-server /redis/redis.conf"
-
-  redis-node-2:
-    image: redis:alpine
-    ports:
-      - 7001:6379
-    networks:
-      - zapdiviser
-    volumes:
-      - redis-2:/redis
-      - ./redis.conf:/redis/redis.conf
-    command: /bin/sh -c "redis-server /redis/redis.conf"
-
-  redis-node-3:
-    image: redis:alpine
-    ports:
-      - 7002:6379
-    networks:
-      - zapdiviser
-    volumes:
-      - redis-3:/redis
-      - ./redis.conf:/redis/redis.conf
-    command: /bin/sh -c "redis-server /redis/redis.conf"
-
-  redis-node-4:
-    image: redis:alpine
-    ports:
-      - 7003:6379
-    networks:
-      - zapdiviser
-    volumes:
-      - redis-4:/redis
-      - ./redis.conf:/redis/redis.conf
-    command: /bin/sh -c "redis-server /redis/redis.conf"
-
-  redis-node-5:
-    image: redis:alpine
-    ports:
-      - 7004:6379
-    networks:
-      - zapdiviser
-    volumes:
-      - redis-5:/redis
-      - ./redis.conf:/redis/redis.conf
-    command: /bin/sh -c "redis-server /redis/redis.conf"
-
-  redis-node-6:
-    image: redis:alpine
-    ports:
-      - 7005:6379
-    networks:
-      - zapdiviser
-    volumes:
-      - redis-6:/redis
-      - ./redis.conf:/redis/redis.conf
-    command: /bin/sh -c "redis-server /redis/redis.conf"
-
-  redis-cluster-creator:
+  redis:
     image: redis:alpine
     ports:
       - 6379:6379
     networks:
       - zapdiviser
-    command: /bin/sh -c "redis-cli --cluster create redis-node-1:6379 redis-node-2:6379 redis-node-3:6379 redis-node-4:6379 redis-node-5:6379 redis-node-6:6379 --cluster-replicas 1 --cluster-yes"
-    depends_on:
-      - redis-node-1
-      - redis-node-2
-      - redis-node-3
-      - redis-node-4
-      - redis-node-5
-      - redis-node-6
+    volumes:
+      - redis:/redis
+    command: redis-server --requirepass ${REDIS_PASSWORD}
 
   minio:
     image: minio/minio
@@ -133,11 +62,6 @@ networks:
   zapdiviser:
 
 volumes:
-  redis-1:
-  redis-2:
-  redis-3:
-  redis-4:
-  redis-5:
-  redis-6:
+  redis:
   postgres:
   minio:
