--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
+  "packageManager": "pnpm@9.0.6",
   "devDependencies": {
     "husky": "^9.0.11",
     "lint-staged": "^15.2.2",
