--- a/whatsapp-node/package.json
+++ b/whatsapp-node/package.json
@@ -2,11 +2,10 @@
   "name": "whatsapp-node",
   "version": "1.0.0",
   "description": "",
-  "type": "module",
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/index.ts",
-    "build": "tsc",
+    "build": "sucrase --transforms typescript,imports -d dist src",
     "start": "node dist/index.js"
   },
   "keywords": [],
@@ -14,18 +13,18 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/boom": "^10.0.1",
-    "@whiskeysockets/baileys": "^6.6.0",
-    "bullmq": "^5.1.10",
-    "ioredis": "^5.3.2",
+    "@whiskeysockets/baileys": "^6.7.2",
+    "bullmq": "^5.7.8",
+    "ioredis": "^5.4.1",
     "minio": "^7.1.3",
     "node-cache": "^5.1.2",
     "sucrase": "^3.35.0",
-    "winston": "^3.12.0",
-    "winston-loki": "^6.0.8"
+    "winston": "^3.13.0",
+    "winston-loki": "^6.1.2"
   },
   "devDependencies": {
-    "dotenv": "^16.4.3",
-    "nodemon": "^3.0.3",
-    "typescript": "^5.3.3"
+    "dotenv": "^16.4.5",
+    "nodemon": "^3.1.0",
+    "typescript": "^5.4.5"
   }
 }
