--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -182,7 +182,7 @@ services:
       DB02_CLEANUP_TIME: 10080
     restart: always
     networks:
-      - internal
+      - zapdiviser
 
 networks:
   caddy:
