--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -24,7 +24,8 @@ services:
 
   migrate:
     build:
-      context: ./backend
+      context: .
+      target: backend
     depends_on:
       - db
     networks:
@@ -62,7 +63,7 @@ services:
 
   backend:
     build:
-      context: ..
+      context: .
       target: backend
     networks:
       - zapdiviser
