--- a/backend/package.json
+++ b/backend/package.json
@@ -5,6 +5,7 @@
   "author": "",
   "private": true,
   "license": "UNLICENSED",
+  "packageManager": "pnpm@9.0.6",
   "overrides": {
     "gauge": "^3.0.0",
     "react": "^16.14.0"
@@ -29,9 +30,9 @@
     "@adminjs/passwords": "4.0.0",
     "@adminjs/typeorm": "^5.0.1",
     "@babel/plugin-syntax-import-assertions": "^7.24.1",
-    "@bull-board/api": "^5.17.0",
-    "@bull-board/express": "^5.17.0",
-    "@bull-board/nestjs": "^5.17.0",
+    "@bull-board/api": "^5.17.1",
+    "@bull-board/express": "^5.17.1",
+    "@bull-board/nestjs": "^5.17.1",
     "@getbrevo/brevo": "2.0.0-beta.4",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/bull": "^10.1.1",
@@ -53,7 +54,7 @@
     "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
     "body-parser": "^1.20.2",
-    "bull": "^4.12.2",
+    "bull": "^4.12.3",
     "bullAdapter": "link:@bull-board/api/bullAdapter",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
@@ -69,7 +70,7 @@
     "lodash": "^4.17.21",
     "minio": "^7.1.3",
     "nest-winston": "^1.9.4",
-    "nestjs-minio": "^2.5.5",
+    "nestjs-minio": "^2.6.1",
     "nestjs-typeorm-paginate": "^4.0.4",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
@@ -95,7 +96,7 @@
     "@nestjs/schematics": "^10.1.1",
     "@nestjs/testing": "^10.3.8",
     "@swc/cli": "^0.3.12",
-    "@swc/core": "^1.4.17",
+    "@swc/core": "^1.5.5",
     "@types/bcrypt": "^5.0.2",
     "@types/bluebird": "^3.5.42",
     "@types/cors": "^2.8.17",
@@ -104,11 +105,11 @@
     "@types/express": "^4.17.21",
     "@types/inquirer": "^9.0.7",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.0",
+    "@types/lodash": "^4.17.1",
     "@types/multer": "^1.4.11",
-    "@types/node": "^20.12.8",
+    "@types/node": "^20.12.11",
     "@types/nodemailer": "^6.4.15",
-    "@types/react": "^18.3.1",
+    "@types/react": "^18.3.2",
     "@types/supertest": "^2.0.16",
     "@typescript-eslint/eslint-plugin": "^6.21.0",
     "@typescript-eslint/parser": "^6.21.0",
