--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   "author": "",
   "license": "ISC",
   "packageManager": "pnpm@9.0.6",
+  "dependencies": {
+    "typescript": "^5.4.5"
+  },
   "devDependencies": {
     "husky": "^9.0.11",
-    "lint-staged": "^15.2.2",
-    "typescript": "^5.4.5"
+    "lint-staged": "^15.2.2"
   },
   "workspaces": [
     "frontend",
