--- a/compose.yaml
+++ b/compose.yaml
@@ -58,6 +58,11 @@ services:
         mc mb minio/zapdiviser
         mc mb minio/backups
 
+  soketi:
+    image: quay.io/soketi/soketi:1.0-16-distroless
+    ports:
+      - 6001:6001
+
 networks:
   zapdiviser:
 
