--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,26 +5,26 @@
   "packageManager": "pnpm@9.0.6",
   "dependencies": {
     "@emotion/cache": "^11.11.0",
-    "@emotion/react": "^11.11.3",
-    "@emotion/styled": "^11.11.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@mui/base": "5.0.0-beta.36",
     "@mui/lab": "5.0.0-alpha.165",
-    "@mui/material": "^5.15.10",
-    "@mui/system": "^5.15.9",
-    "@mui/x-date-pickers": "^6.19.4",
-    "@mui/x-date-pickers-pro": "^6.19.4",
+    "@mui/material": "^5.15.17",
+    "@mui/system": "^5.15.15",
+    "@mui/x-date-pickers": "^6.19.9",
+    "@mui/x-date-pickers-pro": "^6.19.9",
     "@reduxjs/toolkit": "^1.9.7",
     "@svgr/webpack": "8.0.1",
-    "@tanstack/query-core": "^5.20.5",
-    "@tanstack/react-query": "^5.20.5",
-    "@types/react-table": "^7.7.19",
-    "axios": "^1.6.7",
+    "@tanstack/query-core": "^5.36.0",
+    "@tanstack/react-query": "^5.36.0",
+    "@types/react-table": "^7.7.20",
+    "axios": "^1.6.8",
     "canvas": "^2.11.2",
     "chance": "^1.1.11",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.9.2",
-    "formik": "^2.4.5",
+    "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "history": "^5.3.0",
     "iconsax-react": "^0.0.8",
@@ -34,46 +34,47 @@
     "notistack": "^3.0.1",
     "openapi-codegen": "^2.2.2",
     "pdf.js-extract": "^0.2.1",
-    "pdf2json": "^3.0.5",
+    "pdf2json": "^3.1.2",
     "pdfreader": "^3.0.2",
     "qrcode.react": "^3.1.0",
-    "react": "^18.2.0",
+    "react": "^18.3.1",
     "react-csv": "^2.2.2",
     "react-device-detect": "^2.2.3",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-intl": "^6.6.2",
-    "react-number-format": "^5.3.1",
+    "react-intl": "^6.6.6",
+    "react-number-format": "^5.3.4",
     "react-redux": "^8.1.3",
-    "react-router": "^6.22.0",
-    "react-router-dom": "^6.22.0",
+    "react-router": "^6.23.1",
+    "react-router-dom": "^6.23.1",
     "react-scripts": "^5.0.1",
     "react-select": "^5.8.0",
     "react-slick": "^0.29.0",
     "react-table": "^7.8.0",
     "react-timer-hook": "^3.0.7",
     "react18-input-otp": "^1.1.4",
-    "reactflow": "^11.10.3",
+    "reactflow": "^11.11.3",
     "redux": "^5.0.1",
-    "rxdb": "^15.19.0",
+    "rxdb": "^15.20.0",
     "rxjs": "^7.8.1",
-    "simplebar": "^6.2.5",
-    "simplebar-react": "^3.2.4",
+    "simplebar": "^6.2.6",
+    "simplebar-react": "^3.2.5",
     "slick-carousel": "^1.8.1",
-    "socket.io-client": "^4.7.4",
+    "socket.io-client": "^4.7.5",
     "stylis-plugin-rtl": "^2.1.1",
     "uuid": "^9.0.1",
-    "vite-tsconfig-paths": "^4.3.1",
+    "vite-tsconfig-paths": "^4.3.2",
     "web-vitals": "^3.5.2",
-    "yup": "^1.3.3"
+    "yup": "^1.4.0"
   },
   "scripts": {
     "dev": "vite",
     "build": "vite build",
     "start": "vite preview",
-    "build-stage": "env-cmd -f .env.stage vite build"
+    "build-stage": "env-cmd -f .env.stage vite build",
+    "gen": "openapi-codegen gen zapdiviser"
   },
   "babel": {
     "presets": [
@@ -93,38 +94,38 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.23.9",
-    "@babel/eslint-parser": "^7.23.10",
-    "@openapi-codegen/cli": "^2.0.0",
-    "@openapi-codegen/typescript": "^8.0.0",
+    "@babel/core": "^7.24.5",
+    "@babel/eslint-parser": "^7.24.5",
+    "@openapi-codegen/cli": "^2.0.2",
+    "@openapi-codegen/typescript": "^8.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@types/autosuggest-highlight": "^3.2.3",
     "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.14.202",
-    "@types/react": "^18.2.55",
-    "@types/react-dom": "^18.2.19",
+    "@types/lodash": "^4.17.1",
+    "@types/react": "^18.3.2",
+    "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^9.0.8",
-    "@types/webpack-env": "^1.18.4",
+    "@types/webpack-env": "^1.18.5",
     "@vitejs/plugin-react-swc": "^3.6.0",
     "env-cmd": "^10.1.0",
-    "eslint": "^8.56.0",
+    "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
     "eslint-config-react-app": "7.0.1",
     "eslint-plugin-flowtype": "^8.0.3",
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.33.2",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "eslint-plugin-react-refresh": "^0.4.5",
-    "immutable": "^4.3.5",
+    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react-hooks": "^4.6.2",
+    "eslint-plugin-react-refresh": "^0.4.7",
+    "immutable": "^4.3.6",
     "prettier": "^2.8.8",
     "prettier-eslint-cli": "^7.1.0",
     "react-error-overlay": "6.0.11",
-    "typescript": "^5.3.3",
-    "vite": "^4.5.2"
+    "typescript": "^5.4.5",
+    "vite": "^4.5.3"
   }
 }
