--- a/compose.yaml
+++ b/compose.yaml
@@ -62,6 +62,10 @@ services:
     image: quay.io/soketi/soketi:1.0-16-distroless
     ports:
       - 6001:6001
+    environment:
+      SOKETI_DEFAULT_APP_ID: zapdiviser
+      SOKETI_DEFAULT_APP_KEY: ${SOKETI_APP_KEY}
+      SOKETI_DEFAULT_APP_SECRET: ${SOKETI_APP_SECRET}
 
 networks:
   zapdiviser:
