--- a/frontend/package.json
+++ b/frontend/package.json
@@ -36,6 +36,7 @@
     "pdf.js-extract": "^0.2.1",
     "pdf2json": "^3.1.2",
     "pdfreader": "^3.0.2",
+    "pusher-js": "8.4.0-rc2",
     "qrcode.react": "^3.1.0",
     "react": "^18.3.1",
     "react-csv": "^2.2.2",
