--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -189,6 +189,8 @@ services:
     labels:
       caddy_0: soketi.${HOST}
       caddy_0.reverse_proxy: "{{upstreams 6001}}"
+    networks:
+      - caddy
 
 networks:
   caddy:
