--- a/frontend/package.json
+++ b/frontend/package.json
@@ -7,6 +7,7 @@
     "@emotion/cache": "^11.11.0",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@million/lint": "1.0.0-rc.18",
     "@mui/base": "5.0.0-beta.36",
     "@mui/lab": "5.0.0-alpha.165",
     "@mui/material": "^5.15.17",
@@ -31,6 +32,7 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
+    "million": "^3.1.7",
     "notistack": "^3.0.1",
     "openapi-codegen": "^2.2.2",
     "pdf.js-extract": "^0.2.1",
