--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,21 +10,22 @@
     "@million/lint": "1.0.0-rc.18",
     "@mui/base": "5.0.0-beta.36",
     "@mui/lab": "5.0.0-alpha.165",
-    "@mui/material": "^5.15.17",
-    "@mui/system": "^5.15.15",
-    "@mui/x-date-pickers": "^6.19.9",
-    "@mui/x-date-pickers-pro": "^6.19.9",
+    "@mui/material": "^5.15.20",
+    "@mui/system": "^5.15.20",
+    "@mui/x-date-pickers": "^6.20.1",
+    "@mui/x-date-pickers-pro": "^6.20.1",
     "@reduxjs/toolkit": "^1.9.7",
     "@svgr/webpack": "8.0.1",
-    "@tanstack/query-core": "^5.36.0",
-    "@tanstack/react-query": "^5.36.0",
+    "@tanstack/query-core": "^5.45.0",
+    "@tanstack/react-query": "^5.45.0",
     "@types/react-table": "^7.7.20",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "canvas": "^2.11.2",
     "chance": "^1.1.11",
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
-    "emoji-picker-react": "^4.9.2",
+    "emoji-picker-react": "^4.10.0",
+    "file-type": "^19.0.0",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "history": "^5.3.0",
@@ -32,11 +33,11 @@
     "jwt-decode": "^3.1.2",
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
-    "million": "^3.1.7",
+    "million": "^3.1.11",
     "notistack": "^3.0.1",
     "openapi-codegen": "^2.2.2",
     "pdf.js-extract": "^0.2.1",
-    "pdf2json": "^3.1.2",
+    "pdf2json": "^3.1.3",
     "pdfreader": "^3.0.2",
     "pusher-js": "8.4.0-rc2",
     "qrcode.react": "^3.1.0",
@@ -47,8 +48,8 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-intl": "^6.6.6",
-    "react-number-format": "^5.3.4",
+    "react-intl": "^6.6.8",
+    "react-number-format": "^5.4.0",
     "react-redux": "^8.1.3",
     "react-router": "^6.23.1",
     "react-router-dom": "^6.23.1",
@@ -60,10 +61,10 @@
     "react18-input-otp": "^1.1.4",
     "reactflow": "^11.11.3",
     "redux": "^5.0.1",
-    "rxdb": "^15.20.0",
+    "rxdb": "^15.24.0",
     "rxjs": "^7.8.1",
-    "simplebar": "^6.2.6",
-    "simplebar-react": "^3.2.5",
+    "simplebar": "^6.2.7",
+    "simplebar-react": "^3.2.6",
     "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.7.5",
     "stylis-plugin-rtl": "^2.1.1",
@@ -97,22 +98,22 @@
     ]
   },
   "devDependencies": {
-    "@babel/core": "^7.24.5",
-    "@babel/eslint-parser": "^7.24.5",
+    "@babel/core": "^7.24.7",
+    "@babel/eslint-parser": "^7.24.7",
     "@openapi-codegen/cli": "^2.0.2",
     "@openapi-codegen/typescript": "^8.0.2",
     "@testing-library/jest-dom": "^5.17.0",
     "@types/autosuggest-highlight": "^3.2.3",
     "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.1",
-    "@types/react": "^18.3.2",
+    "@types/lodash": "^4.17.5",
+    "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
     "@types/react-slick": "^0.23.13",
     "@types/uuid": "^9.0.8",
     "@types/webpack-env": "^1.18.5",
-    "@vitejs/plugin-react-swc": "^3.6.0",
+    "@vitejs/plugin-react-swc": "^3.7.0",
     "env-cmd": "^10.1.0",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.10.0",
@@ -121,7 +122,7 @@
     "eslint-plugin-import": "^2.29.1",
     "eslint-plugin-jsx-a11y": "^6.8.0",
     "eslint-plugin-prettier": "^4.2.1",
-    "eslint-plugin-react": "^7.34.1",
+    "eslint-plugin-react": "^7.34.2",
     "eslint-plugin-react-hooks": "^4.6.2",
     "eslint-plugin-react-refresh": "^0.4.7",
     "immutable": "^4.3.6",
