--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,7 +25,6 @@
     "crypto-js": "^4.2.0",
     "date-fns": "^2.30.0",
     "emoji-picker-react": "^4.10.0",
-    "file-type": "^19.0.0",
     "formik": "^2.4.6",
     "framer-motion": "^10.18.0",
     "history": "^5.3.0",
@@ -34,6 +33,7 @@
     "lodash": "^4.17.21",
     "match-sorter": "^6.3.4",
     "million": "^3.1.11",
+    "mime-types": "^2.1.35",
     "notistack": "^3.0.1",
     "openapi-codegen": "^2.2.2",
     "pdf.js-extract": "^0.2.1",
@@ -107,6 +107,7 @@
     "@types/chance": "^1.1.6",
     "@types/jest": "^29.5.12",
     "@types/lodash": "^4.17.5",
+    "@types/mime-types": "^2.1.4",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/react-query": "^1.2.9",
