--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -135,10 +135,12 @@ services:
       - "traefik.enable=true"
       - "traefik.http.routers.backend.rule=Host(`backend.${HOST}`)"
       - "traefik.http.routers.backend.entrypoints=websecure"
+      - "traefik.http.routers.backend.service=backend"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
       - "traefik.http.routers.webhook.rule=Host(`webhook.${HOST}`)"
       - "traefik.http.routers.webhook.entrypoints=websecure"
       - "traefik.http.services.webhook.loadbalancer.server.port=8000"
+      - "traefik.http.routes.webhook.service=webhook"
       - "traefik.http.routers.redirect.middlewares=webhook-rewrite"
       - "traefik.http.middlewares.webhook-rewrite.redirectregex.regex=^/api/webhook(.*)"
       - "traefik.http.middlewares.webhook-rewrite.redirectregex.replacement=/api/product/webhook$${1}"
@@ -146,6 +148,7 @@ services:
       - "traefik.http.routers.redirect.rule=Host(`redirect.${HOST}`)"
       - "traefik.http.routers.redirect.entrypoints=websecure"
       - "traefik.http.services.redirect.loadbalancer.server.port=8000"
+      - "traefik.http.routes.redirect.service=redirect"
       - "traefik.http.routers.redirect.middlewares=redirect-rewrite"
       - "traefik.http.middlewares.redirect-rewrite.redirectregex.regex=^/api/redirects(.*)"
       - "traefik.http.middlewares.redirect-rewrite.redirectregex.replacement=/api/redirects$${1}"
@@ -153,6 +156,7 @@ services:
       - "traefik.http.routers.admin.rule=Host(`admin.${HOST}`)"
       - "traefik.http.routers.admin.entrypoints=websecure"
       - "traefik.http.services.admin.loadbalancer.server.port=8000"
+      - "traefik.http.routes.admin.service=admin"
       - "traefik.http.routers.admin.middlewares=redirect-admin"
       - "traefik.http.middlewares.redirect-admin.redirectregex.regex=^/admin(.*)"
       - "traefik.http.middlewares.redirect-admin.redirectregex.replacement=/admin-br$${1}"
