--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -91,11 +91,13 @@ services:
       - "traefik.http.routers.site.rule=Host(`${HOST}`)"
       - "traefik.http.routers.site.entrypoints=websecure"
       - "traefik.http.services.site.loadbalancer.server.url=https://contingenciainfinita.com"
+      - "traefik.http.routers.site.service=site"
       - "traefik.http.routers.site.tls=false"
       - "traefik.http.middlewares.set-site-headers.headers.customrequestheaders.Alt-Used=contingenciainfinita.com"
       - "traefik.http.middlewares.set-site-headers.headers.customrequestheaders.Host=contingenciainfinita.com"
       - "traefik.http.routers.site.middlewares=set-site-headers"
       - "traefik.http.routers.www.entrypoints=websecure"
+      - "traefik.http.routers.www.service=www"
       - "traefik.http.routers.www.middlewares=redirect-to-site"
       - "traefik.http.middlewares.redirect-to-site.redirectregex.regex=^https://www.${HOST}(.*)"
       - "traefik.http.middlewares.redirect-to-site.redirectregex.replacement=https://${HOST}$${1}"
