--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -90,7 +90,7 @@ services:
       - "traefik.http.services.app.loadbalancer.server.port=8080"
       - "traefik.http.routers.site.rule=Host(`${HOST}`)"
       - "traefik.http.routers.site.entrypoints=websecure"
-      - "traefik.http.services.site.loadbalancer.server.url=https://contingenciainfinita.com"
+      - "traefik.http.services.site.loadbalancer.servers.url=https://contingenciainfinita.com"
       - "traefik.http.routers.site.service=site"
       - "traefik.http.routers.site.tls=false"
       - "traefik.http.middlewares.set-site-headers.headers.customrequestheaders.Alt-Used=contingenciainfinita.com"
@@ -144,7 +144,7 @@ services:
       - "traefik.http.routers.webhook.rule=Host(`webhook.${HOST}`)"
       - "traefik.http.routers.webhook.entrypoints=websecure"
       - "traefik.http.services.webhook.loadbalancer.server.port=8000"
-      - "traefik.http.routes.webhook.service=webhook"
+      - "traefik.http.routers.webhook.service=webhook"
       - "traefik.http.routers.redirect.middlewares=webhook-rewrite"
       - "traefik.http.middlewares.webhook-rewrite.redirectregex.regex=^/api/webhook(.*)"
       - "traefik.http.middlewares.webhook-rewrite.redirectregex.replacement=/api/product/webhook$${1}"
@@ -152,7 +152,7 @@ services:
       - "traefik.http.routers.redirect.rule=Host(`redirect.${HOST}`)"
       - "traefik.http.routers.redirect.entrypoints=websecure"
       - "traefik.http.services.redirect.loadbalancer.server.port=8000"
-      - "traefik.http.routes.redirect.service=redirect"
+      - "traefik.http.routers.redirect.service=redirect"
       - "traefik.http.routers.redirect.middlewares=redirect-rewrite"
       - "traefik.http.middlewares.redirect-rewrite.redirectregex.regex=^/api/redirects(.*)"
       - "traefik.http.middlewares.redirect-rewrite.redirectregex.replacement=/api/redirects$${1}"
@@ -160,7 +160,7 @@ services:
       - "traefik.http.routers.admin.rule=Host(`admin.${HOST}`)"
       - "traefik.http.routers.admin.entrypoints=websecure"
       - "traefik.http.services.admin.loadbalancer.server.port=8000"
-      - "traefik.http.routes.admin.service=admin"
+      - "traefik.http.routers.admin.service=admin"
       - "traefik.http.routers.admin.middlewares=redirect-admin"
       - "traefik.http.middlewares.redirect-admin.redirectregex.regex=^/admin(.*)"
       - "traefik.http.middlewares.redirect-admin.redirectregex.replacement=/admin-br$${1}"
