--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -123,7 +123,7 @@ services:
       - /var/run/docker.sock:/var/run/docker.sock
     labels:
       - "traefik.enable=true"
-      - "traefik.http.routers.backend.rule=Host(`backend.${HOST}`)"
+      - "traefik.http.routers.backend.rule=Host(`app.${HOST}`) && PathPrefix(`/api`)"
       - "traefik.http.routers.backend.entrypoints=websecure"
       - "traefik.http.routers.backend.service=backend"
       - "traefik.http.services.backend.loadbalancer.server.port=8000"
@@ -132,7 +132,7 @@ services:
       - "traefik.http.services.webhook.loadbalancer.server.port=8000"
       - "traefik.http.routers.webhook.service=webhook"
       - "traefik.http.routers.redirect.middlewares=webhook-rewrite"
-      - "traefik.http.middlewares.webhook-rewrite.redirectregex.regex=^/api/webhook(.*)"
+      - "traefik.http.middlewares.webhook-rewrite.redirectregex.regex=^(.*)"
       - "traefik.http.middlewares.webhook-rewrite.redirectregex.replacement=/api/product/webhook$${1}"
       - "traefik.http.middlewares.webhook-rewrite.redirectregex.permanent=true"
       - "traefik.http.routers.redirect.rule=Host(`redirect.${HOST}`)"
@@ -140,7 +140,7 @@ services:
       - "traefik.http.services.redirect.loadbalancer.server.port=8000"
       - "traefik.http.routers.redirect.service=redirect"
       - "traefik.http.routers.redirect.middlewares=redirect-rewrite"
-      - "traefik.http.middlewares.redirect-rewrite.redirectregex.regex=^/api/redirects(.*)"
+      - "traefik.http.middlewares.redirect-rewrite.redirectregex.regex=^(.*)"
       - "traefik.http.middlewares.redirect-rewrite.redirectregex.replacement=/api/redirects$${1}"
       - "traefik.http.middlewares.redirect-rewrite.redirectregex.permanent=true"
       - "traefik.http.routers.admin.rule=Host(`admin.${HOST}`)"
@@ -148,7 +148,7 @@ services:
       - "traefik.http.services.admin.loadbalancer.server.port=8000"
       - "traefik.http.routers.admin.service=admin"
       - "traefik.http.routers.admin.middlewares=redirect-admin"
-      - "traefik.http.middlewares.redirect-admin.redirectregex.regex=^/admin(.*)"
+      - "traefik.http.middlewares.redirect-admin.redirectregex.regex=^(.*)"
       - "traefik.http.middlewares.redirect-admin.redirectregex.replacement=/admin-br$${1}"
       - "traefik.http.middlewares.redirect-admin.redirectregex.permanent=true"
 
