--- a/compose.prod.yaml
+++ b/compose.prod.yaml
@@ -130,25 +130,22 @@ services:
       - "traefik.http.services.webhook.loadbalancer.server.port=8000"
       - "traefik.http.routers.webhook.service=webhook"
       - "traefik.http.routers.redirect.middlewares=webhook-rewrite"
-      - "traefik.http.middlewares.webhook-rewrite.redirectregex.regex=^(.*)"
-      - "traefik.http.middlewares.webhook-rewrite.redirectregex.replacement=/api/product/webhook$${1}"
-      - "traefik.http.middlewares.webhook-rewrite.redirectregex.permanent=true"
+      - "traefik.http.middlewares.webhook-rewrite.replacepathregex.regex=^(.*)"
+      - "traefik.http.middlewares.webhook-rewrite.replacepathregex.replacement=/api/product/webhook$${1}"
       - "traefik.http.routers.redirect.rule=Host(`redirect.${HOST}`)"
       - "traefik.http.routers.redirect.entrypoints=websecure"
       - "traefik.http.services.redirect.loadbalancer.server.port=8000"
       - "traefik.http.routers.redirect.service=redirect"
       - "traefik.http.routers.redirect.middlewares=redirect-rewrite"
-      - "traefik.http.middlewares.redirect-rewrite.redirectregex.regex=^(.*)"
-      - "traefik.http.middlewares.redirect-rewrite.redirectregex.replacement=/api/redirects$${1}"
-      - "traefik.http.middlewares.redirect-rewrite.redirectregex.permanent=true"
+      - "traefik.http.middlewares.redirect-rewrite.replacepathregex.regex=^(.*)"
+      - "traefik.http.middlewares.redirect-rewrite.replacepathregex.replacement=/api/redirects$${1}"
       - "traefik.http.routers.admin.rule=Host(`admin.${HOST}`)"
       - "traefik.http.routers.admin.entrypoints=websecure"
       - "traefik.http.services.admin.loadbalancer.server.port=8000"
       - "traefik.http.routers.admin.service=admin"
       - "traefik.http.routers.admin.middlewares=redirect-admin"
-      - "traefik.http.middlewares.redirect-admin.redirectregex.regex=^(.*)"
-      - "traefik.http.middlewares.redirect-admin.redirectregex.replacement=/admin-br$${1}"
-      - "traefik.http.middlewares.redirect-admin.redirectregex.permanent=true"
+      - "traefik.http.middlewares.redirect-admin.replacepathregex.regex=^(.*)"
+      - "traefik.http.middlewares.redirect-admin.replacepathregex.replacement=/admin-br$${1}"
 
   loki:
     image: grafana/loki
