--- a/compose.yaml
+++ b/compose.yaml
@@ -3,8 +3,6 @@ name: code
 services:
   db:
     image: postgres:alpine
-    ports:
-      - 5433:5432
     networks:
       - zapdiviser
     environment:
@@ -16,21 +14,16 @@ services:
 
   redis:
     image: redis:alpine
-    ports:
-      - 6379:6379
     networks:
       - zapdiviser
     volumes:
       - redis:/redis
-    command: redis-server --bind redis --port 6379 --requirepass ${REDIS_PASSWORD}
+    command: redis-server --requirepass ${REDIS_PASSWORD}
 
   minio:
     image: minio/minio
     volumes:
       - "minio:/data"
-    ports:
-      - 9000:9000
-      - 9001:9001
     environment:
       MINIO_ROOT_USER: ${MINIO_USER}
       MINIO_ROOT_PASSWORD: ${MINIO_PASSWORD}
@@ -60,12 +53,12 @@ services:
 
   soketi:
     image: quay.io/soketi/soketi:1.0-16-distroless
-    ports:
-      - 6001:6001
     environment:
       SOKETI_DEFAULT_APP_ID: zapdiviser
-      SOKETI_DEFAULT_APP_KEY: ${SOKETI_APP_KEY}
+      SOKETI_DEFAULT_APP_KEY: ${VITE_SOKETI_APP_KEY}
       SOKETI_DEFAULT_APP_SECRET: ${SOKETI_APP_SECRET}
+    networks:
+      - zapdiviser
 
   migrate:
     build:
@@ -85,6 +78,7 @@ services:
 
 networks:
   zapdiviser:
+    external: true
 
 volumes:
   redis:
