--- a/compose.yaml
+++ b/compose.yaml
@@ -55,7 +55,7 @@ services:
     image: quay.io/soketi/soketi:1.0-16-distroless
     environment:
       SOKETI_DEFAULT_APP_ID: zapdiviser
-      SOKETI_DEFAULT_APP_KEY: ${VITE_SOKETI_APP_KEY}
+      VITE_SOKETI_DEFAULT_APP_KEY: ${VITE_SOKETI_APP_KEY}
       SOKETI_DEFAULT_APP_SECRET: ${SOKETI_APP_SECRET}
     networks:
       - zapdiviser
