--- a/backend/package.json
+++ b/backend/package.json
@@ -33,6 +33,9 @@
     "@bull-board/api": "^5.17.1",
     "@bull-board/express": "^5.17.1",
     "@bull-board/nestjs": "^5.17.1",
+    "@fastify/formbody": "^7.4.0",
+    "@fastify/multipart": "^8.3.0",
+    "@fastify/static": "^7.0.4",
     "@getbrevo/brevo": "2.0.0-beta.4",
     "@liaoliaots/nestjs-redis": "^9.0.5",
     "@nestjs/bull": "^10.1.1",
@@ -43,6 +46,7 @@
     "@nestjs/mapped-types": "^2.0.5",
     "@nestjs/passport": "^10.0.3",
     "@nestjs/platform-express": "^10.3.8",
+    "@nestjs/platform-fastify": "^10.3.10",
     "@nestjs/platform-socket.io": "^10.3.8",
     "@nestjs/schedule": "^4.0.2",
     "@nestjs/swagger": "^7.3.1",
@@ -53,7 +57,6 @@
     "adminjs": "^7.8.1",
     "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
-    "body-parser": "^1.20.2",
     "bull": "^4.12.3",
     "bullAdapter": "link:@bull-board/api/bullAdapter",
     "class-transformer": "^0.5.1",
