--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,8 @@ name: code
 services:
   db:
     image: postgres:alpine
+    ports:
+      - 5433:5432
     networks:
       - zapdiviser
     environment:
