--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,10 @@
   },
   "scripts": {
     "build": "nest build",
-    "start": "nest start",
-    "start:dev": "nest start --watch",
-    "start:debug": "nest start --debug --watch",
-    "start:prod": "node --max-old-space-size=4096 ./dist/main.js",
+    "start": "nest start -e 'node --experimental-require-module'",
+    "start:dev": "nest start --watch -e 'node --experimental-require-module'",
+    "start:debug": "nest start --debug --watch -e 'node --experimental-require-module'",
+    "start:prod": "node --experimental-require-module --max-old-space-size=4096 ./dist/main.js",
     "email:dev": "email dev --dir src/modules/email/emails",
     "migration:generate": "pnpm build &&ts-node ./node_modules/typeorm/cli -d ./src/ormconfig.ts migration:generate",
     "migration:run": "pnpm build && ts-node ./node_modules/typeorm/cli -d ./src/ormconfig.ts migration:run",
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@adminjs/express": "^6.1.0",
+    "@adminjs/fastify": "^4.1.3",
     "@adminjs/passwords": "4.0.0",
     "@adminjs/typeorm": "^5.0.1",
     "@babel/plugin-syntax-import-assertions": "^7.24.7",
@@ -53,6 +54,7 @@
     "@nestjs/websockets": "^10.3.10",
     "@react-email/components": "^0.0.14",
     "@react-email/render": "0.0.12",
+    "adminjs": "^7.8.11",
     "bcrypt": "^5.1.1",
     "bluebird": "^3.7.2",
     "bull": "^4.16.0",
@@ -65,6 +67,7 @@
     "express": "^4.19.2",
     "express-formidable": "^1.2.0",
     "express-session": "^1.18.0",
+    "fastify": "^4.28.1",
     "inquirer": "^9.3.6",
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
@@ -89,7 +92,8 @@
     "typeorm-extension": "^3.6.0",
     "typia": "^5.5.10",
     "winston": "^3.13.1",
-    "winston-loki": "^6.1.2"
+    "winston-loki": "^6.1.2",
+    "yaml": "^2.5.0"
   },
   "devDependencies": {
     "@babel/plugin-syntax-dynamic-import": "^7.8.3",
